--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,10 @@
-html{
+html {
   font-size: 62.5%;
 }
 
 body {
   margin: 0;
-  font-family: 300 11px/1.4 'Helvetica Neue', sans-serif;
+  font: 300 11px/1.4 'Helvetica Neue', sans-serif;
   color: #444;
   background: #022c43;
   overflow: hidden;
