Update some styling

--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -27,3 +27,18 @@
 .bottom-tag-html {
   margin-left: -20px;
 }
+
+.container {
+  width: 100%;
+  will-change: contents;
+  height: 90%;
+  min-height: 566px;
+  position: absolute;
+  opacity: 0;
+  top: 5%;
+  margin: 0 auto;
+  z-index: 1;
+  transform-style: preserve-3d;
+  animation: fadeIn 1s forwards;
+  animation-delay: 1s;
+}
