--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -11,7 +11,7 @@
 
 .top-tags {
   bottom: auto;
-  top:35px;
+  top: 35px;
 }
 
 .tags {
@@ -21,7 +21,7 @@
   bottom: 0;
   left: 120px;
   font-size: 18px;
-  font-family: 'La Belle Aurore';
+  font-family: 'La Belle Aurore', sans-serif;
 }
 
 .bottom-tag-html {
